# prismarine-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
HdrScreenshots/: hdr_snapshot_0.hdr  hdr_snapshot_1.hdr  hdr_snapshot_2.hdr
Include/: Transformer.hpp
Include/Prismarine/: Dispatcher.hpp  Dispatcher.inl  Implementations.hpp  MaterialSet.hpp  MaterialSet.inl  Pipeline.hpp  Pipeline.inl  Prismarine.hpp  Radix.hpp  SceneObject.hpp  SceneObject.inl  Structs.hpp  TextureSet.hpp  TextureSet.inl  TriangleHierarchy.hpp  TriangleHierarchy.inl  Utils.hpp  VertexInstance.hpp  VertexInstance.inl
ShadersSDK/: README.md  build-spv-new.bat
ShadersSDK/hlbvh/: aabbmaker.comp  build-new.comp  build.comp  child-link.comp  includes.glsl  minmax.comp  refit-new.comp  refit.comp
ShadersSDK/include/: STOmath.glsl  ballotlib.glsl  constants.glsl  mathlib.glsl  morton.glsl  random.glsl  rays-new.glsl  rayslib.glsl  shadinglib.glsl  structs.glsl  uniforms.glsl  vertex.glsl
ShadersSDK/legacy/include/: materialFunc.glsl
ShadersSDK/legacy/radix/: histogram.comp  includes.glsl  permute.comp  prefix-scan.comp
ShadersSDK/legacy/render/: clear.comp
ShadersSDK/public/: environment.glsl
ShadersSDK/radix/: histogram.comp  includes.glsl  permute.comp  pfx-cross.comp  pfx-work.comp  prefix-scan-cross.comp  prefix-scan-work.comp  prefix-scan.comp  single.comp
ShadersSDK/raytracing/: camera.comp  clear.comp  deinterlace.comp  directTraverse.comp  filter.comp  rayshading.comp  reclaim.comp  render.frag  render.vert  sampler.comp  surface.comp  testmat.comp
ShadersSDK/render-new/: clear.comp  testmat.comp
ShadersSDK/tools/: loader.comp
ShadersSDK/vertex/: loader.comp
Source/Examples/: Application.hpp  Go.cpp  Physics.cpp  Viewer.cpp
directx-sdk/: build-glsl.cmd  build-shaders.cmd  intersection.hlsl
directx-sdk/hlbvh/: aabbmaker.compute  aabbmaker.hlsl  build.compute  build.hlsl  includes.cginc  includes.hlsl  minmax.compute  minmax.hlsl  refit.compute  refit.hlsl  traverse.hlsl
directx-sdk/include/: STOmath.hlsli  constants.hlsl  constants.hlsli  morton.cginc  morton.hlsli  rays.cginc  rays.hlsl  structs.cginc  traverse.cginc  uniforms.cginc  uniforms.hlsl  uniforms.hlsli  vertex.cginc  vertex.hlsl
directx-sdk/radix/: histogram.compute  histogram.hlsl  includes.cginc  includes.hlsl  permute.compute  permute.hlsl  prefix-scan.compute  prefix-scan.hlsl
directx-sdk/render/: intersection.compute  intersection.hlsl
example/: main.cpp  physics.cpp
include/tracer/: controller.hpp  desktop.ini  dispatcher.hpp  dispatcher.inl  includes.hpp  intersector.hpp  intersector.inl  material.hpp  material.inl  materialSet.hpp  materialSet.inl  mesh.hpp  mesh.inl  radix.hpp  sceneObject.hpp  sceneObject.inl  structs.hpp  tracer.hpp  tracer.inl  transformer.hpp  utils.hpp  vertexInstance.hpp  vertexInstance.inl
shaders-sdk/: build-spv-new.bat  build-spv.bat  build.bat
shaders-sdk/experimental/: intersection.comp  traverse.glsl  ultraMath.glsl
shaders-sdk/hlbvh/: aabbmaker.comp  build.comp  grouper.comp  includes.glsl  minmax.comp  refit.comp  resort.comp  traverse.glsl
shaders-sdk/include/: STOmath.glsl  constants.glsl  materialFunc-new.glsl  materialFunc.glsl  morton.glsl  random.glsl  rays-new.glsl  rays.glsl  structs.glsl  textureManager.glsl  traverse.glsl  uniforms.glsl  vertex.glsl
shaders-sdk/legacy/: minecraft.glsl
shaders-sdk/legacy/render/: directTraverse.comp  resolver.comp  testmat.comp
shaders-sdk/public/: environment.glsl  surface.glsl
shaders-sdk/radix/: histogram.comp  includes.glsl  permute.comp  prefix-scan.comp
shaders-sdk/render/: begin.comp  camera.comp  clear.comp  directTraverse.comp  intersection.comp  quantizer.comp  reclaim.comp  render.frag  render.vert  resolver.comp  sampler.comp  testmat-rt.comp  testmat.comp  traverse.comp
shaders-sdk/render-new/: camera.comp  directTraverse.comp  reclaim.comp  render.frag  render.vert  sampler.comp  surface.comp  testmat.comp
shaders-sdk/tools/: loader.comp
